# APPLE_DETECT_TRACKING

./: CMakeLists.txt  hsv_tuner.py
Arduino/: control.ino
src/: ImageProcessor.cpp  ImageProcessor.h  ImageTracker.cpp  ImageTracker.h  KinectManager.cpp  KinectManager.h  SimpleSerial.h  TrackManager.cpp  TrackManager.h  main.cpp
src/config/: Configuration.h
src/utils/: DataTypes.h  ThreadSafeQueue.h
